# nessie-api

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/demo_plugin/: __init__.py
src/nessie_api/models/: __init__.py  console_message.py  filter.py  graph.py  plugin.py  workspace.py
src/nessie_api/models/tests/: test_filter.py  test_graph.py  test_workspace.py
src/nessie_api/protocols/: context.py
